user type module
- CRUD operation
- Repository pattern
- Migration & seed
- Route
- api Docs
